TFP-5554: Lagt til ny historikkinnslag for FastsettBGTidsbegrensetArbeidsforholdOppdaterer